crates/elif-http-derive/tests/ui/fail/inject_empty_args.rs
//! Test that #[inject] with empty arguments fails

use elif_http_derive::inject;

// This should fail - inject requires at least one service
#[inject()]
pub struct EmptyInjectController;

fn main() {}